# go-phantom

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  install.bat  install.ps1  install.sh  pyproject.toml  requirements.txt  test-all-config.json
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml  release-macos-native.yml  release.yml
Formula/: phantom.rb
assets/: phantom.icns
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/components/: Downloads.astro  Features.astro  Footer.astro  Hero.astro  QuickStart.astro
docs/src/layouts/: Layout.astro
docs/src/pages/: index.astro
docs/src/styles/: global.css
packaging/chocolatey/: go-phantom.nuspec
packaging/chocolatey/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
packaging/linux/: phantom.desktop  postinst.sh
packaging/scoop/: go-phantom.json
packaging/winget/: hammadxcm.go-phantom.installer.yaml  hammadxcm.go-phantom.locale.en-US.yaml  hammadxcm.go-phantom.yaml
phantom/: __init__.py  __main__.py  app.py  constants.py
phantom-macos/: ExportOptions.plist
phantom-macos/Phantom/: AppState.swift  Info.plist  PhantomApp.swift
phantom-macos/Phantom.xcodeproj/: project.pbxproj
phantom-macos/Phantom.xcodeproj/xcshareddata/xcschemes/: Phantom.xcscheme
phantom-macos/Phantom/Config/: ConfigManager.swift  PhantomConfig.swift  Presets.swift
phantom-macos/Phantom/Core/: ActiveWindow.swift  AntiDetection.swift  Randomizer.swift  Scheduler.swift  TabShortcuts.swift
phantom-macos/Phantom/Hotkeys/: HotkeyManager.swift
phantom-macos/Phantom/Simulators/: AppSwitcherSimulator.swift  BrowserTabsSimulator.swift  KeyboardSimulator.swift  MouseSimulator.swift  ScrollSimulator.swift  SimulatorProtocol.swift
phantom-macos/Phantom/Stealth/: ProcessMasking.swift
phantom-macos/Phantom/UI/: AccessibilityPrompt.swift  SettingsView.swift  StatusBarController.swift
phantom-macos/scripts/: create-dmg.sh
phantom/config/: __init__.py  defaults.json  manager.py  presets.py  schema.py
phantom/core/: __init__.py  active_window.py  platform.py  randomization.py  scheduler.py  stats.py  tab_shortcuts.py
phantom/hotkeys/: __init__.py  manager.py
phantom/simulators/: __init__.py  app_switcher.py  base.py  browser_tabs.py  code_typing.py  keyboard.py  mouse.py  scroll.py
phantom/stealth/: __init__.py  anti_detection.py  process.py
phantom/ui/: __init__.py  ansi.py  dashboard.py  gui.py  icons.py  log_handler.py  modes.py  tail_formatter.py  themes.py  tray.py
scripts/: bump_version.py  generate_icons.py
snap/: snapcraft.yaml
snap/gui/: phantom.desktop
tests/: conftest.py  test_active_window.py  test_anti_detection.py  test_app.py  test_config_manager.py  test_config_schema.py  test_dashboard.py  test_generate_icons.py  test_gui.py  test_hotkeys.py  test_icons.py  test_integration.py  test_log_handler.py  test_main.py  test_packaging.py  test_platform.py  test_presets.py  test_process.py  test_randomization.py  test_registry.py  test_scheduler.py  test_simulators.py  test_stats.py  test_tab_shortcuts.py  test_tail_formatter.py  test_tray.py
