[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "go-phantom"
version = "0.0.2"
description = "Cross-platform activity simulator"
readme = "README.md"
license = "MIT"
authors = [{name = "Phantom Contributors"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "pynput>=1.7.6",
    "pyautogui>=0.9.54",
    "pystray>=0.19.4",
    "Pillow>=9.0.0",
    "setproctitle>=1.3.2",
    "rich>=12.0.0",
    "textual>=0.80",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.0",
    "pyinstaller>=6.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "pre-commit>=3.0",
    "textual-dev>=1.0",
]

[project.urls]
Homepage = "https://github.com/hammadxcm/go-phantom"
Repository = "https://github.com/hammadxcm/go-phantom"
Issues = "https://github.com/hammadxcm/go-phantom/issues"

[project.scripts]
phantom = "phantom.__main__:main"

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["phantom"]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["phantom*"]
